# ontology

adaptors/: Cargo.toml
adaptors/src/: lib.rs  main.rs  polis.rs
ontology/data/: Cargo.toml  README.md
ontology/data/src/: main.rs
ontology/process/: README.md
